Update footer in landing page: Add contact information and legal details

--- a/landing.html
+++ b/landing.html
@@ -805,8 +805,12 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <h3>InsideDynamic GmbH</h3>
-                    <p>Verbindet Telefonie-Welten. Spezialisiert auf KI-Telefonie-Integration und SIP-Lösungen für den deutschen Markt.</p>
-                    <p>Made in Germany</p>
+                    <p>Augustaanlage 67<br>68165 Mannheim<br>Baden-Württemberg, Deutschland</p>
+                    <p style="margin-top: 16px;">
+                        <a href="tel:+4962149088100" style="color: rgba(255,255,255,0.8);">+49 621 49088100</a><br>
+                        <a href="mailto:kontakt@insidedynamic.de" style="color: rgba(255,255,255,0.8);">kontakt@insidedynamic.de</a><br>
+                        <a href="https://www.insidedynamic.de" target="_blank" style="color: rgba(255,255,255,0.8);">www.insidedynamic.de</a>
+                    </p>
                 </div>
                 <div class="footer-col">
                     <h4>Produkt</h4>
@@ -826,10 +830,11 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Kontakt</h4>
+                    <h4>Rechtliches</h4>
                     <ul>
-                        <li><a href="mailto:info@insidedynamic.de">E-Mail</a></li>
-                        <li><a href="https://github.com/insidedynamic-de">GitHub</a></li>
+                        <li>Geschäftsführer: Viktor Nikolayev</li>
+                        <li>USt-IdNr.: DE366416827</li>
+                        <li>HRB 749972 (AG Stuttgart)</li>
                     </ul>
                 </div>
             </div>
