Enhance routing display: Add user extensions to routing table and update UI

--- a/landing.html
+++ b/landing.html
@@ -722,9 +722,15 @@
                         <td><span class="status status-test">Im Test</span></td>
                     </tr>
                     <tr>
-                        <td><strong>Agfeo</strong></td>
-                        <td>Cloud / On-Premise</td>
+                        <td><strong>Sipgate</strong> Nebenstelle</td>
+                        <td>Cloud Nebenstelle</td>
+                        <td><span class="status status-ok">Produktiv</span></td>
                         <td><span class="status status-wip">In Arbeit</span></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Agfeo</strong> SIP Trunk</td>
+                        <td>Cloud / On-Premise PBX</td>
+                        <td><span class="status status-ok">Produktiv</span></td>
                         <td><span class="status status-wip">In Arbeit</span></td>
                     </tr>
                     <tr>
