--- a/landing.html
+++ b/landing.html
@@ -789,6 +789,50 @@
         </div>
     </section>
 
+    <!-- Live Config Section -->
+    <section class="live-config" id="live-config" style="padding: 80px 0; background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%); display: none;">
+        <div class="container">
+            <div class="section-title">
+                <h2>Aktuelle Konfiguration</h2>
+                <p>Live-Daten aus dem SIP Wrapper System</p>
+            </div>
+
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 24px;">
+                <!-- Users -->
+                <div style="background: white; border-radius: 12px; padding: 24px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    <h4 style="margin-bottom: 16px; color: var(--primary);">
+                        <span style="margin-right: 8px;">👥</span> Benutzer
+                    </h4>
+                    <div id="config-users">Laden...</div>
+                </div>
+
+                <!-- Inbound Routes -->
+                <div style="background: white; border-radius: 12px; padding: 24px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    <h4 style="margin-bottom: 16px; color: var(--secondary);">
+                        <span style="margin-right: 8px;">📥</span> Inbound Routing
+                    </h4>
+                    <div id="config-inbound">Laden...</div>
+                </div>
+
+                <!-- Outbound Routes -->
+                <div style="background: white; border-radius: 12px; padding: 24px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    <h4 style="margin-bottom: 16px; color: var(--primary);">
+                        <span style="margin-right: 8px;">📤</span> Outbound Routing
+                    </h4>
+                    <div id="config-outbound">Laden...</div>
+                </div>
+
+                <!-- Gateways -->
+                <div style="background: white; border-radius: 12px; padding: 24px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    <h4 style="margin-bottom: 16px; color: var(--gray);">
+                        <span style="margin-right: 8px;">🔌</span> SIP Trunks
+                    </h4>
+                    <div id="config-gateways">Laden...</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA -->
     <section class="cta" id="contact">
         <div class="container">
@@ -853,5 +897,85 @@
             </div>
         </div>
     </footer>
+
+    <!-- Config Loading Script -->
+    <script>
+        // Configuration API URL (change to your deployed URL)
+        const CONFIG_API_URL = '/api/config';
+
+        async function loadConfig() {
+            try {
+                const response = await fetch(CONFIG_API_URL);
+                if (!response.ok) throw new Error('Config not available');
+
+                const config = await response.json();
+
+                // Show the config section
+                document.getElementById('live-config').style.display = 'block';
+
+                // Render Users
+                const usersDiv = document.getElementById('config-users');
+                if (config.users && config.users.length > 0) {
+                    usersDiv.innerHTML = config.users.map(u =>
+                        `<div style="display: flex; justify-content: space-between; padding: 8px 0; border-bottom: 1px solid #eee;">
+                            <code>${u.username}</code>
+                            <span style="background: #e0f2fe; padding: 2px 8px; border-radius: 4px; font-size: 0.875rem;">${u.extension}</span>
+                        </div>`
+                    ).join('');
+                } else {
+                    usersDiv.innerHTML = '<span style="color: #999;">Keine Benutzer</span>';
+                }
+
+                // Render Inbound Routes
+                const inboundDiv = document.getElementById('config-inbound');
+                if (config.inbound_routes && config.inbound_routes.length > 0) {
+                    inboundDiv.innerHTML = config.inbound_routes.map(r =>
+                        `<div style="display: flex; align-items: center; gap: 8px; padding: 8px 0; border-bottom: 1px solid #eee;">
+                            <span style="background: #10b981; color: white; padding: 2px 8px; border-radius: 4px; font-size: 0.875rem;">${r.gateway}</span>
+                            <span>→</span>
+                            <code>${r.extension}</code>
+                        </div>`
+                    ).join('');
+                } else {
+                    inboundDiv.innerHTML = '<span style="color: #999;">Keine Inbound-Routen</span>';
+                }
+
+                // Render Outbound Routes
+                const outboundDiv = document.getElementById('config-outbound');
+                if (config.outbound_user_routes && config.outbound_user_routes.length > 0) {
+                    outboundDiv.innerHTML = config.outbound_user_routes.map(r =>
+                        `<div style="display: flex; align-items: center; gap: 8px; padding: 8px 0; border-bottom: 1px solid #eee;">
+                            <code>${r.username}</code>
+                            <span>→</span>
+                            <span style="background: #2563eb; color: white; padding: 2px 8px; border-radius: 4px; font-size: 0.875rem;">${r.gateway}</span>
+                        </div>`
+                    ).join('');
+                } else if (config.default_gateway) {
+                    outboundDiv.innerHTML = `<div>Default: <span style="background: #2563eb; color: white; padding: 2px 8px; border-radius: 4px;">${config.default_gateway}</span></div>`;
+                } else {
+                    outboundDiv.innerHTML = '<span style="color: #999;">Keine Outbound-Routen</span>';
+                }
+
+                // Render Gateways
+                const gatewaysDiv = document.getElementById('config-gateways');
+                if (config.gateways && config.gateways.length > 0) {
+                    gatewaysDiv.innerHTML = config.gateways.map(g =>
+                        `<div style="display: inline-block; background: #f1f5f9; padding: 4px 12px; border-radius: 20px; margin: 4px; font-size: 0.875rem;">
+                            ${g.name}
+                        </div>`
+                    ).join('');
+                } else {
+                    gatewaysDiv.innerHTML = '<span style="color: #999;">Keine Gateways</span>';
+                }
+
+            } catch (error) {
+                console.log('Config not available:', error.message);
+                // Keep section hidden if config not available
+            }
+        }
+
+        // Load config on page load
+        document.addEventListener('DOMContentLoaded', loadConfig);
+    </script>
 </body>
 </html>
